@@ -26,10 +26,11 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Role::FileMunger" => 0,
     "Dist::Zilla::Role::MetaProvider" => 0,
     "JSON::MaybeXS" => 0,
-    "Module::Data" => 0,
+    "Module::Metadata" => 0,
     "Module::Runtime" => 0,
     "Moose" => "2.0",
     "MooseX::Types::Moose" => 0,
+    "Path::Tiny" => 0,
     "YAML::Tiny" => 0,
     "namespace::autoclean" => 0,
     "strict" => 0,
@@ -38,7 +39,6 @@ my %WriteMakefileArgs = (
   "TEST_REQUIRES" => {
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
-    "Path::Tiny" => 0,
     "Test::DZil" => 0,
     "Test::More" => "0.89",
     "constant" => 0
@@ -62,7 +62,7 @@ my %FallbackPrereqs = (
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "JSON::MaybeXS" => 0,
-  "Module::Data" => 0,
+  "Module::Metadata" => 0,
   "Module::Runtime" => 0,
   "Moose" => "2.0",
   "MooseX::Types::Moose" => 0,
