@@ -1,11 +1,17 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.004003
+ [Added / runtime requires]
+ - Module::Metadata
+ - Path::Tiny
+
  [Removed / runtime requires]
  - Dist::Zilla::Util::ConfigDumper
+ - Module::Data
 
  [Removed / test requires]
  - Dist::Zilla::Util::Test::KENTNL 1.003001
+ - Path::Tiny
 
 1.004002 2015-03-06T23:08:04Z
 
