@@ -8,6 +8,13 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - English
  - Software::License::Perl_5
 
+ [Added / runtime recommends]
+ - Path::Tiny 0.058
+
+ [Added / runtime requires]
+ - Module::Metadata
+ - Path::Tiny
+
  [Changed / develop requires]
  - Test::More 0.88 → 0.96
 
@@ -20,9 +27,14 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
  [Removed / runtime requires]
  - Dist::Zilla::Util::ConfigDumper
+ - Module::Data
+
+ [Removed / test recommends]
+ - Path::Tiny 0.058
 
  [Removed / test requires]
  - Dist::Zilla::Util::Test::KENTNL 1.003001
+ - Path::Tiny
 
 1.004002 2015-03-06T23:08:04Z
  [Added / develop requires]
