@@ -1,6 +1,11 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.004003
+ [Added / runtime recommends]
+ - Path::Tiny 0.058
+
+ [Removed / test recommends]
+ - Path::Tiny 0.058
 
 1.004002 2015-03-06T23:08:04Z
  [Added / runtime recommends]
